fix: Adicionando Text-align no footer para arrumar texto do Fale Conosco.

--- a/frontend/src/components/footer/style.module.css
+++ b/frontend/src/components/footer/style.module.css
@@ -28,6 +28,7 @@
   gap: 2rem;
   padding: 0 64px;
   align-items: center;
+  text-align: center;
   img {
     height: 30px;
     align-self: flex-end;
